--- a/src/styles/components/_logotype.scss
+++ b/src/styles/components/_logotype.scss
@@ -8,6 +8,11 @@
   align-items: center;
   width: 100%;
   aspect-ratio: 1196/384;
+  margin-left: auto;
+  margin-right: auto;
+  @include b.min-width('medium') {
+    @include m.desktop-inner-width;
+  }
 }
 
 .sage-logotype__side {
