--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -7,11 +7,11 @@
 }
 
 .modal__backdrop {
-  position: fixed;
-  opacity: 0.9;
-  // backdrop-filter: blur(4px);
-  inset: 0;
   @include m.theme() {
+    position: fixed;
+    opacity: 0.8;
+    backdrop-filter: blur(32px);
+    inset: 0;
     background-color: m.t(base2);
   }
 }
@@ -20,8 +20,8 @@
   position: fixed;
   inset: 0;
   display: flex;
-	align-items: center;
-	justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .modal__panel {
@@ -29,6 +29,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  opacity: 0.9;
   @include m.theme() {
     background-color: m.t(base2);
     color: m.t(contrast);
@@ -46,4 +47,3 @@
   justify-content: space-between;
   align-items: center;
 }
-
