--- a/src/styles/pages/_drops.scss
+++ b/src/styles/pages/_drops.scss
@@ -11,6 +11,9 @@
 }
 
 .drops-page__subheader {
+  @include m.desktop-width;
+  display: flex;
+  justify-content: center;
 }
 
 .drops-page__subheader-top {
@@ -57,7 +60,7 @@
   display: flex;
   flex-direction: column;
   margin-top: clamp(30px, 5vw, 90px);
-  width: min(1440px, 100vw);
+  @include m.desktop-width;
 }
 
 .drops-page__drop {
